<resources>
    <string name="app_name">MustSee</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="registerLabel">Don\'t have an account?</string>

    <string name="insert_name">Full Name</string>
    <string name="email">Email</string>
    <string name="camera">Camera</string>
    <string name="uploadPic">Import</string>
    <string name="title_activity_home">Must See</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="show_map_title">Show Map</string>
    <string name="search_place_title">Search Places</string>
    <string name="near_me">Near Me</string>
    <string name="my_friends_title">Users on map</string>

    <string name="show_me_on_map">Show me on map</string>

    <string name="my_places_nav_title">My places</string>
    <string name="my_must_see_nav_title">My must see list</string>
    <string name="visited_list_title">Visited places</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="notification_service_title">Notification service</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Logout</string>
    <string name="notification_text">Application Must See has been tracking device location in the background.</string>
    <string name="discoverable">Become Discoverable</string>
    <string name="searchFriends">Search for friends</string>
    <string name="title_activity_search_for_friends">Search For Friends</string>
    <string name="title_activity_friend_list">Friends</string>
    <string name="bluetoothSearch">Search for devices</string>
    <string name="pairedDevicesLabel">Paired devices</string>
    <string name="discoveredDevicesLabel">Discovered devices</string>
    <string name="friendListFriendLabel">FRIENDS</string>
    <string name="title_activity_profile_info">Profile Info</string>
    <string name="title_activity_add_place">New Place</string>
    <string name="NewPlaceNameHint">Name</string>
    <string name="newPlaceCountryHintText">Country</string>
    <string name="newPlaceCityHintText">City \\ Town \\ Province</string>
    <string name="newPlaceDescriptionHint">Write a description</string>
    <string name="newPlaceLocationLabel">Place will be saved with current device location</string>
    <string name="newPlaceLongitudeLabel">Longitude</string>
    <string name="newPlaceLatitudeLabel">Latitude</string>
    <string name="newPlaceAddButtonLabel">ADD</string>
    <string name="newPlaceCategorySpinnerLabel">Choose category</string>
    <string name="newPlaceCategoryLabel">Category</string>
    <string name="title_activity_friends_universal">Friends</string>
    <string name="title_activity_places_list">Places</string>
    <string name="title_activity_place_info">PlaceInfoActivity</string>
    <string name="title_activity_show_me">My location</string>
    <string name="title_activity_show_users_on_map">Map</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_search_in_radius">Map</string>
</resources>

