<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_places"
            android:icon="@drawable/ic_my_places_accent_color"
            android:title="@string/my_places_nav_title" />
        <item
            android:id="@+id/nav_my_must_see_list"
            android:icon="@drawable/ic_must_see_list"
            android:title="@string/my_must_see_nav_title" />
        <item
            android:id="@+id/nav_visited_places"
            android:icon="@drawable/ic_visited_places_accent_color"
            android:title="@string/visited_list_title" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends_accent_color"
            android:title="@string/my_friends_title" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/leaderboard_title" />
    </group>
    <item android:title="@string/settings_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_notification_service"
                    android:icon="@drawable/ic_notification"
                    android:title="@string/notification_service_title" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings_title" />
            </group>
        </menu>

    </item>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/logout_title" />
    </group>



</menu>
