<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77000000"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddPlaceActivity"
    tools:showIn="@layout/activity_add_place">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            android:padding="10dp"
            android:background="@color/whiteTransparent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/newPlacePhoto"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/picture_holder"
                />
        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/newPlaceName"
            style="@style/EditTextTransparentNewPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NewPlaceNameHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/newPlaceCountry"
            style="@style/EditTextTransparentNewPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPlaceCountryHintText"
            android:inputType="text" />

        <EditText
            android:id="@+id/newPlaceCity"
            style="@style/EditTextTransparentNewPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPlaceCityHintText"
            android:inputType="text" />

        <TextView
            style="@style/WhiteNormalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/newPlaceCategoryLabel" />

        <RelativeLayout
            style="@style/SpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/newPlaceCategorySpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </Spinner>
        </RelativeLayout>


        <EditText
            android:id="@+id/newPlaceDescription"
            style="@style/EditTextTransparentNewPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/newPlaceDescriptionHint"
            android:inputType="textMultiLine"
            android:lines="7"
            android:maxLines="7"
            android:scrollHorizontally="false"
            android:scrollbars="vertical" />

        <TextView
            style="@style/WhiteNormalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/newPlaceLocationLabel" />

        <Button
            android:id="@+id/newPlaceAddButton"
            style="@style/WhiteButtonLittleTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newPlaceAddButtonLabel"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>