<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/loginInsertUsername"
        style="@style/TransparentEditText"
        android:layout_width="327dp"
        android:layout_height="43dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:paddingLeft="10dp" />

    <Button
        android:id="@+id/signinButton"
        style="@style/WhiteButtonLittleTransparent"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInsertPassword" />

    <TextView
        android:id="@+id/registerLabelText"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="28dp"
        android:text="@string/registerLabel"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginScreenRegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginScreenRegisterButton"
        style="@style/WhiteButtonLittleTransparent"
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginInsertPassword"
        style="@style/TransparentEditText"
        android:layout_width="327dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInsertUsername" />

</android.support.constraint.ConstraintLayout>