<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <Button
        android:id="@+id/bthShowMap"
        style="@style/HomeButton"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginTop="52dp"
        android:drawableLeft="@drawable/ic_world_map_accent_color"
        android:drawableStart="@drawable/ic_world_map_accent_color"
        android:text="@string/show_map_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSearchPlaces"
        style="@style/HomeButton"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_search_accent_color"
        android:drawableStart="@drawable/ic_search_accent_color"
        android:text="@string/search_place_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bthShowMap" />

    <Button
        android:id="@+id/btnNearMe"
        style="@style/HomeButton"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_near_me_accent_color"
        android:drawableStart="@drawable/ic_near_me_accent_color"
        android:text="@string/near_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearchPlaces" />

    <Button
        android:id="@+id/bth_friends"
        style="@style/HomeButton"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/friends_icon"
        android:drawableStart="@drawable/friends_icon"
        android:text="@string/my_friends_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNearMe" />
</android.support.constraint.ConstraintLayout>