<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FriendListActivity"
    tools:showIn="@layout/activity_friend_list">

    <Button
        android:id="@+id/friendsActivityBtnDiscoverable"
        style="@style/HomeButtonSmallPadding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/discoverable"
        app:layout_constraintEnd_toStartOf="@+id/friendsActivityBtnSearchFriends"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/friendsActivityBtnSearchFriends"
        style="@style/HomeButtonSmallPadding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:text="@string/searchFriends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/friendsActivityBtnDiscoverable"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/friendListFriendLabel"
        style="@style/ListTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/friendListFriendLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsActivityBtnDiscoverable" />

    <ListView
        android:id="@+id/friendsActivityFriendsList"
        android:layout_width="344dp"
        android:layout_height="364dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendListFriendLabel" />

</android.support.constraint.ConstraintLayout>